--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ theme: jekyll-theme-so-simple
 locale: tr-TR
 title: "Çağatay Yücelen"
 description: "Simple is better than complex."
-baseurl: "/" # the subpath of your site, e.g. "/blog"
+baseurl: "" # the subpath of your site, e.g. "/blog"
 url: https://cyucelen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: "/images/logo.png" # path of site logo, e.g. "/assets/images/logo.png"
 date_format: "%B %-d, %Y"
