trying to load assets correctly

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ locale: tr-TR
 title: "Çağatay Yücelen"
 description: "Simple is better than complex."
 baseurl: "" # the subpath of your site, e.g. "/blog"
-url: https://cyucelen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "https://cyucelen.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: "/images/logo.png" # path of site logo, e.g. "/assets/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: true
