--- a/config.toml
+++ b/config.toml
@@ -6,3 +6,18 @@ copyright = "Copyright {year}"
 
 [permalinks]
   blog = "/:filename/"
+
+
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ''
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = 'rrt'
+    tabWidth = 4
